# skill-reviewer

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: claude-sonnet.yaml  gpt-4o.yaml  mixed.yaml
datasets/: azure_sdk_baseline.yaml
scenarios/: azure_sdk_storage_baseline.yaml
src/skill_reviewer/: __init__.py  __main__.py  azure_client.py  cli.py  code_validator.py  config.py  copilot_client.py  loader.py  models.py  prompts.py  reviewer.py
